# A2ATester

./: .gitignore  README.md  pyproject.toml  requirements.txt
a2a_tester/: __init__.py  main.py  server.py
a2a_tester/a2a/: __init__.py  client.py  jsonrpc.py  render.py  sse.py
a2a_tester/frontend/: app.css  app.js  index.html
a2a_tester/storage/: __init__.py  database.py  paths.py
a2a_tester/web/: __init__.py
docs/: PROJECT_DOCUMENTATION.md
scripts/: build.py
