[project]
name = "a2a-tester"
version = "0.1.0"
description = "Desktop GUI client for testing A2A agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
  "pywebview>=5.3",
  "httpx>=0.27",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
a2a-tester = "a2a_tester.main:main"
